# Distributed-LLM-based-multi-Agent-for-autonomous-Site-Reliability-Engineering-Devops-task-stratus

./: .env.ratelimit  .env.save  .env.tmpl  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AIOpsLab  Dockerfile  RATE_LIMITING_SUMMARY.md  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  test_agent.sh
docs/: ARCHITECTURE_DIAGRAMS.md  RATE_LIMITING.md
eval/: clean_asci_color_from_log.py  eval.py  eval_tasks.yaml
nginx/: README.md  nginx.conf  nginx.prod.conf
scripts/: install_rate_limiting.sh  setup_rate_limiting.sh  test_rate_limiting.py
src/stratus/: action_stack.py  crew.py  main.py  utils.py
src/stratus/agents/: aiopslab.py  base.py  config.py  itbench.py
src/stratus/tools/: custom_tool.py  human_tool.py  llm_analyzer.py
